clone-landing-page

--- a/src/index.html
+++ b/src/index.html
@@ -212,7 +212,7 @@
         <section class="contacts" id="contacts">
           <h2 class="section-title section-title--align--left">Contact Us</h2>
           <div class="contacts__form">
-            <form class="form"
+            <form onsubmit="this.reset(); return false;" class="form"
                 method="POST">
 
               <input class="input" type="text"
