--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,11 @@
               alt="B&O logo" class="top-bar__logo">
             </a>
             <div class="top-bar__icons">
-              <a href="tel:+1 234 5555-55-55" class="icon icon--phone"></a>
+              <a href="tel:+1 234 5555-55-55" class="icon icon--phone">
+
+                <a class="hidden__element hidden__element--style" href="tel:+1 234 5555-55-55">+1 234 5555-55-55</a>
+
+              </a>
               <a href="#menu" class="icon icon--menu"></a>
             </div>
           </div>
@@ -195,14 +199,14 @@
             section-title--align--left">Timeless, for 50 years and counting
           </h2>
 
-          <div class="about__description">
-            <p>Bang & Olufsen is expanding its Recreated Classics Program with the launch of Beosystems – a limited edition
+
+          <p class="about__description">Bang & Olufsen is expanding its Recreated Classics Program with the launch of Beosystems – a limited edition
                 music
                 system that transcends time by bridging the gap between one of our iconic designs from 1972 and today’s
                 cutting-edge
                 digital technology.
-            </p>
-          </div>
+          </p>
+
         </div>
       </div>
       </section>
