--- a/src/index.html
+++ b/src/index.html
@@ -34,11 +34,14 @@
               alt="B&O logo" class="top-bar__logo">
             </a>
             <div class="top-bar__icons">
-              <a href="tel:+1 234 5555-55-55" class="icon icon--phone">
-
+              <div class="hidden__element__position">
+                <a href="tel:+1 234 5555-55-55" class="icon icon--phone"></a>
+                <a class="hidden__element hidden__element--style"
+                  href="tel:+1 234 5555-55-55">+1 234 5555-55-55</a>
+              </div>
+              <!-- <a href="tel:+1 234 5555-55-55" class="icon icon--phone">
                 <a class="hidden__element hidden__element--style" href="tel:+1 234 5555-55-55">+1 234 5555-55-55</a>
-
-              </a>
+              </a> -->
               <a href="#menu" class="icon icon--menu"></a>
             </div>
           </div>
